package Devialet.AudioSource;

import "CallMeMaybe/CallMeMaybe.proto";
import "CallMeMaybe/CommonMessages.proto";
import "TheSoundOfSilence/Picture.proto";
import "TheSoundOfSilence/Track.proto";
import "TheSoundOfSilence/Session.proto";
import "TheSoundOfSilence/Source.proto";

message InputTypeMsg {

 enum InputType {
  NotDefinedType = 0;
  TVType = 1;
  CDPlayerType = 2;
  DVDBDPlayerType = 3;
  ComputerType = 4;
  GamingConsoleType = 5;
  MediaCenterType = 6;
  TurntableType = 7;
 }
 required uint32 type = 1;
}

message LiveSourceStateMsg {

 enum State {
  Ready = 1;
  Playing = 2;
  Stopped = 3;
  Paused = 4;
 }
 required uint32 state = 1;
}

message LiveSourceAvailableMethods {
 required bool hasInputTypeId = 1;
 required bool isNameUserEditable = 2;
 required bool isSelectable = 3;
 optional bool allowToDisableAutoSwitch = 4 [default = true];
}

message LoadSessionQuery {
 required string name = 1;
}

message UnloadSessionQuery {
 required SessionId sessionId = 1;
}

